fix checkstyle problem